# DICT-back-end-programming-Lopatin-Danylo-538

./: .env.example  .gitignore  Dockerfile  README.md  app.py  database.py  docker-compose.yml  pyproject.toml  requirements.txt
controllers/: auth.py  guestbook.py  home.py
models/: comment.py  user.py
practice_1/: send_mail.py
practice_2/: app.py
practice_2/templates/: index.html
practice_3/: main.py
practice_3/templates/: index.html
practices_3+/: Dockerfile  docker-compose.yml  main.py  requirements.txt
services/: auth.py  email_confirmation.py  templates.py  validation.py
templates/: base.html  confirm_result.html  home.html  index.html  login.html  register.html  register_success.html
